--- a/driving.html
+++ b/driving.html
@@ -65,9 +65,9 @@
   <div id="inputted_details">
   <h3>Inputted Data</h3>
 	
-	<i>CRSid: <b><span id="inputted_crsid"></span></b></i>
-	<i>, Origin: <b><span id="inputted_origin"></span></b></i>
+	<i>Origin: <b><span id="inputted_origin"></span></b></i>
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
+	<i>, CRSid: <b><span id="inputted_crsid"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Traveler Number: <b><span id="inputted_traveler_num"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
