--- a/air.html
+++ b/air.html
@@ -40,7 +40,7 @@
 		</div>	
 		
 		<div>
-		<input type = "number" id = "calc_emmissions" placeholder = "Total passengers' CO2/journey (KG)", style="width: 28.5em"/>
+		<input type = "number" id = "emmissions" placeholder = "Total passengers' CO2/journey (KG)", style="width: 28.5em"/>
 		</div>	
 <br>
 	
@@ -54,13 +54,9 @@
 				
 	
 <br>
-<br>
 
 
-<div id="Submit Data">
-	<button type = "button" onclick="calc_route();">Submit Data</button>
 
-</div>
 </div>
 
 
@@ -69,13 +65,17 @@
 	
 	<i>Origin: <b><span id="inputted_origin"></span></b></i>
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
+	<i>, CO2/journey (kg): <b><span id = "inputted_emissions"></span></b></i>
 	<i>, CRSid: <b><span id="inputted_crsid"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
 
  </div>
-  
-  
+ <br>
+ <div id="Submit Data">
+	<button type = "button" onclick="calc_route();">Submit Data</button>
+
+</div>
 
 </center>
 
@@ -86,6 +86,7 @@ crsid = document.getElementById("crsid");
 role = document.getElementById("role");
 origin = document.getElementById("from");
 destination = document.getElementById("to");
+emissions = document.getElementById("emmissions");
 
 // Add listeners
 origin.addEventListener('change', info_changed);
@@ -93,7 +94,7 @@ destination.addEventListener('change', info_changed);
 crsid.addEventListener('change', info_changed);
 date.addEventListener('change', info_changed);
 role.addEventListener('change', info_changed);
-
+emissions.addEventListener('change', info_changed);
 
 
 function info_changed(){
@@ -102,6 +103,7 @@ function info_changed(){
 		document.getElementById("inputted_crsid").innerHTML = document.getElementById("crsid").value;
 		document.getElementById("inputted_date").innerHTML = document.getElementById("date").value;
 		document.getElementById("inputted_role").innerHTML = document.getElementById("role").value;
+		document.getElementById("inputted_emissions").innerHTML = document.getElementById("emmissions").value;
 		}
 </script>
 </body>
