--- a/driving.html
+++ b/driving.html
@@ -134,7 +134,8 @@ function InsertData(){
 	total_co2:"23978"
 	})
 	.then(()=>{
-	alert("data sucessfully stored");
+	alert("Thank you, your data has been sucesfully sorted, if you made a mistake in your submission please contact tas72");
+	location.reload()
 	})
 	.catch((error)=>{
 	alert(error)
@@ -156,7 +157,7 @@ function InsertData(){
 
 	<!-- Load the API key-->
     <script async defer
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDstYdEvbcziyb2qrYeJdrW_WdQsCaEUtI&libraries=places&callback=initMap&v=weekly">	  
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_7S9z-lH4ztXoOB84IY-eH6OGBMt_-A0&libraries=places&callback=initMap&v=weekly">	  
 	</script>
   </body>
 </html>
