--- a/driving.html
+++ b/driving.html
@@ -48,10 +48,10 @@
 						 <option value = "Masters">Masters Student</option> 
 						 <option value = "Undergraduate">Undergraduate Student</option> </select>
 				
-	<b>Fuel Type: </b><select id = 'fuel_type'><option value = "Petrol">Petrol</option> 
-							  <option value = "Diesel">Diesel</option> 
-							  <option value = "Hybrid">Hybrid</option> 
-							  <option value = "Electric">Electric</option> </select>
+	<b>Fuel Type: </b><select id = 'fuel_type'><option value = "petrol">Petrol</option> 
+							  <option value = "diesel">Diesel</option> 
+							  <option value = "hybrid">Hybrid</option> 
+							  <option value = "electric">Electric</option> </select>
 
 	
 	  <b> Car Size: </b>
