--- a/driving.html
+++ b/driving.html
@@ -55,10 +55,10 @@
 
 	
 	  <b> Car Size: </b>
-					<select id = 'car_size'> <option title = "Petrol/CN/LPG- up to 1.4 litre engine&#010;Diesel- up to 1.7 litre engine&#010Others- Guage of similar sized vehicles" value = "small">Small</option>
-											<option title = "Petrol/CN/LPG- from 1.4 to 2.0 litre engine&#010;Diesel- from 1.7 to 2.0 litre engine&#010Others- Guage of similar sized vehicles" value = "medium">Medium</option>
-											<option title = "Petrol/CN/LPG- above 2.0 litre engine&#010;Diesel- above 2.0 litre engine&#010Others- Guage of similar sized vehicles" value = "large">Large</option>
-											<option title = "Unknown engine size" value = "average">Average</option> </select>
+					<select id = 'car_size'> <option title = "Petrol/CN/LPG- up to 1.4 litre engine&#010;Diesel- up to 1.7 litre engine&#010Others- Guage of similar sized vehicles" value = 0>Small</option>
+											<option title = "Petrol/CN/LPG- from 1.4 to 2.0 litre engine&#010;Diesel- from 1.7 to 2.0 litre engine&#010Others- Guage of similar sized vehicles" value = 1>Medium</option>
+											<option title = "Petrol/CN/LPG- above 2.0 litre engine&#010;Diesel- above 2.0 litre engine&#010Others- Guage of similar sized vehicles" value = 2>Large</option>
+											<option title = "Unknown engine size" value = 3>Average</option> </select>
 	
 	</center>
 <br>
