--- a/driving.html
+++ b/driving.html
@@ -89,7 +89,7 @@
 	<i>Travelled Distance: <b><span id="first_travel_dist"></span> + <span id = "second_travel_dist"></span> =  <span id = "total_dist"></span> km</b></i>
 	</div>
 	<div>
-	<i>Estimated total kgs of CO2 Emitted: <b><span id="est_co2_emm"></span></b></i>
+	<i>Estimated total kgs of CO2-eq Emitted: <b><span id="est_co2_emm"></span></b></i>
 	</div>
 	
 </div>
