--- a/transit.html
+++ b/transit.html
@@ -12,7 +12,7 @@
 </head>
   <body>
   <center>
-  <h1>CO2 Travel Emissions Calculator-Transit</h1>
+  <h1>CO2 Travel Emissions Calculator- Public Transport</h1>
   </center>
   </body>
   <div id = "top-panel">
