--- a/air.html
+++ b/air.html
@@ -39,7 +39,7 @@
 		</div>	
 		
 		<div>
-		<input type = "number" id = "emmissions" placeholder = "Total passengers' CO2/journey (kg)", style="width: 28.5em"/>
+		<input type = "number" id = "emmissions" placeholder = "Total passenger's CO2/journey (kg)", style="width: 28.5em"/>
 		</div>
 		<div>
 		<input type = "number" id = "distance" placeholder = "Distance travelled (km)", style="width: 28.5em"/>
