--- a/air.html
+++ b/air.html
@@ -18,7 +18,7 @@
   </center>
   
   <div id = "top-panel">
-  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a>
+  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual</a>
   </div>
   <br>
 <center>
@@ -39,7 +39,7 @@
 		</div>	
 		
 		<div>
-		<input type = "number" id = "emmissions" placeholder = "Total passenger's CO2/journey (kg)", style="width: 28.5em"/>
+		<input type = "number" id = "emmissions" placeholder = "Total passengers' CO2/journey (kg)", style="width: 28.5em"/>
 		</div>
 		<div>
 		<input type = "number" id = "distance" placeholder = "Distance travelled (km)", style="width: 28.5em"/>
@@ -53,7 +53,8 @@
 						 <option value = "Post-Doc">Post-Doc</option> 
 						 <option value = "PhD">PhD Student</option> 
 						 <option value = "Masters">Masters Student</option> 
-						 <option value = "Undergraduate">Undergraduate Student</option> </select>
+						 <option value = "Undergraduate">Undergraduate Student</option> 
+						 <option value = "Other">Other</option> </select>
 				
 	
 <br>
@@ -100,6 +101,7 @@ import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.19.1
 
 function InsertData(){
   set(ref(db, String(Date.now())), {
+	manual_input: 'false',
 	method: 'air',
     crsid: document.getElementById("crsid").value,
     date: document.getElementById("date").value,
