--- a/driving.html
+++ b/driving.html
@@ -28,7 +28,7 @@
 		<input type="text" id="from" placeholder = "Origin", size='50'/>
 		</div>
 		<div>
-		<input type="text" id="wp" placeholder = "Waypoint", size='50'/>
+		<input type="text" id="wp" placeholder = "Waypoint, if not required please repeat origin/destination here", size='50'/>
 		</div>
 		
 		<div>
