--- a/transit.html
+++ b/transit.html
@@ -109,7 +109,7 @@ function InsertData(){
 	origin: document.getElementById('from').value,
 	destination: document.getElementById('to').value,
 	distance: document.getElementById("travel_dist").innerHTML,
-	total_co2: document.getElementById("est_co2_emm").innerHTML
+	total_co2: document.getElementById("est_co2_emm").innerHTML,
 	return_journey:document.getElementById('return_j').checked
 	})
 	.then(()=>{
