--- a/driving.html
+++ b/driving.html
@@ -8,15 +8,25 @@
 <link rel="stylesheet" type ="text/css" href = "css/style.css"/>
 
 <script src="js/driving.js"></script>
-
+<script type = 'module' src = 'js/driving_auth.js'></script>
 </head>
+
+
   <body>
   <center>
-  <h1>CO2 Travel Emissions Calculator- Driving</h1>
+  <h1>Travel Emissions Calculator (Driving)</h1>
   </center>
-  </body>
+  
   <div id = "top-panel">
-  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual Submission</a>
+  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual</a>
+  
+  <div>
+    <button id = 'login' type="button">Sign in</button>
+	<button id = 'logout' type = 'button'>Sign Out</button>
+ </div>
+  <div id='username'>
+  Signed in user: <span style="color:green;font-weight:bold;" id="signed_in_user"></span>
+  </div>
   </div>
   
   
@@ -28,7 +38,7 @@
 		<input type="text" id="from" placeholder = "Origin", size='50'/>
 		</div>
 		<div>
-		<input type="text" id="wp" placeholder = "Waypoint, if not required please repeat origin/destination here", size='50'/>
+		<input type="text" id="wp" placeholder = "Waypoint", size='50'/>
 		</div>
 		
 		<div>
@@ -39,7 +49,6 @@
 	
 <br>
 	
-	<b>CRSid: </b><input type ='text', id="crsid", placeholder="anon123">
 	<b>Date of Travel: </b><input type='date' id='date'>
 	<b>Number of Travelers: </b><input type="number" min="1" id="traveler_num"/>
 	<b>Role: </b><select id = 'role'><option value = "PI">PI</option> 
@@ -76,7 +85,6 @@
 	
 	<i>Origin: <b><span id="inputted_origin"></span></b></i>
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
-	<i>, CRSid: <b><span id="inputted_crsid"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Traveler Number: <b><span id="inputted_traveler_num"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
@@ -90,10 +98,10 @@
 <div id="estimated_emissions">
 <h3>Estimated Emissions</h3>
 	<div>
-	<i>Travelled Distance: <b><span id="first_travel_dist"></span> + <span id = "second_travel_dist"></span> =  <span id = "total_dist"></span> km</b></i>
+	<i>One way distance: <b><span id="first_travel_dist"></span> + <span id = "second_travel_dist"></span> =  <span id = "total_dist"></span> km</b></i>
 	</div>
 	<div>
-	<i>Estimated total kgs of CO2-eq Emitted: <b><span id="est_co2_emm"></span></b></i>
+	<i>Estimated total kgs of CO2-eq emitted: <b><span id="est_co2_emm"></span></b></i>
 	</div>
 	
 </div>
@@ -102,55 +110,7 @@
 
 <div>
 <button id = "send">Submit Data</button>
-<script type = "module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
-import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-database.js";
 
-  const firebaseConfig = {
-    apiKey: "AIzaSyCd7nuCEuD7ySAQN8bNxZqpYLUrSQUbpcg",
-    authDomain: "co2-calc-367923.firebaseapp.com",
-    databaseURL: "https://co2-calc-367923-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "co2-calc-367923",
-    storageBucket: "co2-calc-367923.appspot.com",
-    messagingSenderId: "102663905016",
-    appId: "1:102663905016:web:80ecdf2ec7115f42d8a50d",
-    measurementId: "G-KSH5ELJK7N"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase();
-
-function InsertData(){
-  set(ref(db, String(Date.now())), {
-    manual_input: 'false',
-	method: 'driving',
-    crsid: document.getElementById("crsid").value,
-    date: document.getElementById("date").value,
-    num_of_travelers : document.getElementById("traveler_num").value,
-	role: document.getElementById("role").value,
-	fuel: document.getElementById("fuel_type").value,
-	car_size: document.getElementById("car_size").value,
-	origin: document.getElementById('from').value,
-	waypoint: document.getElementById('wp').value,
-	destination: document.getElementById('to').value,
-	distance: document.getElementById("total_dist").innerHTML,
-	total_co2:document.getElementById("est_co2_emm").innerHTML,
-	return_journey:document.getElementById('return_j').checked
-	})
-	.then(()=>{
-	alert("Thank you, your data has been sucesfully sorted, if you made a mistake in your submission please contact tas72");
-	location.reload()
-	})
-	.catch((error)=>{
-	alert(error)
-	});
-}
-
-	var send_btn = document.getElementById("send");
-	send_btn.addEventListener('click', InsertData);
-
-</script>
 
 </div>
 
