--- a/index.html
+++ b/index.html
@@ -6,36 +6,76 @@
 <meta http-equiv ="X-UA-Compatible" content="ie=edge">
 <title>Travel Carbon Emissions Calculator</title>
 <link rel="stylesheet" type ="text/css" href = "css/style.css"/>
-<script type="module" src="js/index.js"></script>
 
+<script type="module" src="js/index.js"></script>
 
 </head>
   <body>
   <center>
-  <h1>CO2 Travel Emissions Calculator</h1>
+  <h1>Travel Emissions Calculator</h1>
   </center>
   
   <div id = "top-panel">
-  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual Submission</a>
+  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual</a>
+  
+  <div>
+    <button id = 'login' type="button">Sign in</button>
+	<button id = 'logout' type = 'button'>Sign Out</button>
+ </div>
+  <div id='username'>
+  Signed in user: <span style="color:green;font-weight:bold;" id="signed_in_user"></span>
   </div>
+  
+  
+  </div>
+  <br>
+  
   
   <div id = "introduction">
-	<br>
-  Welcome to the <a href="https://www.stranks.oe.phy.cam.ac.uk/" target="_blank">StranksLab</a> travel emissions calculator, this is where we aim to calculate and record travel emissions from none day-to-day travel. Please use the links above to navigate between pages before calculating and submitting your estimations.<br><br>
-  The graphs and charts below will be updated periodically as the database is populated, all data submitted is stored securley and only accessible by me (Tom, tas72@cam.ac.uk) however if you wish to remain annonmous please just leave the crsid section blank.<br><br>
+	
+  Welcome to the <a href="https://www.stranks.oe.phy.cam.ac.uk/" target="_blank">StranksLab</a> travel emissions calculator, this is where we aim to calculate and record travel emissions from none day-to-day travel.<br>
   The method for calculating emissions is based off the UK government's  <a href="https://www.gov.uk/government/collections/government-conversion-factors-for-company-reporting" target="_blank">conversion factors for the reporting of greenhouse emissions</a> and the <a href="https://applications.icao.int/icec/Home/Index" target="_blank">ICAO carbon emissions calculator for air travel.</a> All code can be found on <a href="https://github.com/TomSelby/carbon_calculator/tree/main" target="_blank">Github</a>.<br>
   
-  </div>
+<br>
   <center>
-  <div id=chartDiv" style="width:80%; height:300px; margin:0 auto;">
-  <img src='groups.png' alt = 'Emissions by group' width="800" height="500">
-  <img src='overtime.png' alt = 'Emissions by group' width="800" height="500">
-  </center>
+
   
+  
+  <button id = 'update_charts' type="button">Display Data</button>
   </div>
+  </center>
+  <br>
+  <center>
+  <table id="table" border = '1'>
+	<thread>
+  <tr>
+	<th>Entry ID</th>
+    <th>Date of Travel</th>
+    <th>Origin</th>
+    <th>Destination</th>
+	<th>Travel Method</th>
+	<th>Distance (km)</th>
+	<th> Return Journey</th>
+	<th>CO<sub>2</sub>eq (kg)</th>
+
+  </tr>
+  </thread>
+  
+  <tbody  id = 'tbody'>
+  </tbody>
+  </table>
+
+  </div>
+ 
+  <br>
+
+  <div id="emissions_chartDiv" style="width:80%; height:300px; margin:0 auto;"></div>
+  <div id="distance_chartDiv" style="width:80%; height:300px; margin:0 auto;"></div>
+  </center>
 
   </body>
   
+  <script src = "https://code.jscharting.com/2.9.0/jscharting.js"></script>
   
 
 
