--- a/manual.html
+++ b/manual.html
@@ -8,17 +8,25 @@
 <meta http-equiv ="X-UA-Compatible" content="ie=edge">
 <title>Travel Carbon Emissions Calculator</title>
 <link rel="stylesheet" type ="text/css" href = "css/style.css"/>
-
+<script type='module' src='js/manual_auth.js'></script>
 
 </head>
   <body>
 
   <center>
-  <h1>CO2 Travel Emissions Calculator-Manual</h1>
+  <h1>Travel Emissions Calculator (Manual)</h1>
   </center>
   
   <div id = "top-panel">
-  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual Submission</a>
+  <a href = "index.html">Home</a><br><a href = "driving.html">Driving</a><br><a href="air.html">Air</a><br><a href = "transit.html">Public Transport</a><br><a href = "manual.html">Manual</a>
+  
+  <div>
+    <button id = 'login' type="button">Sign in</button>
+	<button id = 'logout' type = 'button'>Sign Out</button>
+ </div>
+  <div id='username'>
+  Signed in user: <span style="color:green;font-weight:bold;" id="signed_in_user"></span>
+  </div>
   </div>
   <br>
 <center>
@@ -42,7 +50,6 @@
 		</div>	
 <br>
 	
-	<b>CRSid: </b><input type ='text', id="crsid", placeholder="anon123">
 	<b>Date of Travel: </b><input type='date' id='date'>
 	<b>Role: </b><select id = 'role'><option value = "PI">PI</option> 
 						 <option value = "Post-Doc">Post-Doc</option> 
@@ -70,8 +77,6 @@
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
 	<i>, CO2eq (kg): <b><span id = "inputted_emissions"></span></b></i>
 	<i>, Distance (km): <b><span id = "inputted_distance"></span></b></i>
-
-	<i>, CRSid: <b><span id="inputted_crsid"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
 	<i>, Travel Method: <b><span id ="inputted_method"></span></b></i>
@@ -79,50 +84,7 @@
  <br>
  <div id="Submit Data">
 <button id = "send">Submit Data</button>
-	<script type = "module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-app.js";
-import { getDatabase, ref, set } from "https://www.gstatic.com/firebasejs/9.19.1/firebase-database.js";
-
-  const firebaseConfig = {
-    apiKey: "AIzaSyCd7nuCEuD7ySAQN8bNxZqpYLUrSQUbpcg",
-    authDomain: "co2-calc-367923.firebaseapp.com",
-    databaseURL: "https://co2-calc-367923-default-rtdb.europe-west1.firebasedatabase.app",
-    projectId: "co2-calc-367923",
-    storageBucket: "co2-calc-367923.appspot.com",
-    messagingSenderId: "102663905016",
-    appId: "1:102663905016:web:80ecdf2ec7115f42d8a50d",
-    measurementId: "G-KSH5ELJK7N"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const db = getDatabase();
-
-function InsertData(){
-  set(ref(db, String(Date.now())), {
-	manual_input: 'true',
-	method: document.getElementById("method").value,
-    crsid: document.getElementById("crsid").value,
-    date: document.getElementById("date").value,
-	role: document.getElementById("role").value,
-	origin: document.getElementById('from').value,
-	destination: document.getElementById('to').value,
-	distance: document.getElementById("distance").value,
-	total_co2: document.getElementById("emmissions").value
-	})
-	.then(()=>{
-	alert("Thank you, your data has been sucesfully sorted, if you made a mistake in your submission please contact tas72");
-	location.reload()
-	})
-	.catch((error)=>{
-	alert(error)
-	});
-}
-
-	var send_btn = document.getElementById("send");
-	send_btn.addEventListener('click', InsertData);
-
-</script>
+	
 </div>
 
 </center>
@@ -140,7 +102,6 @@ travel_mode = document.getElementById("method");
 // Add listeners
 origin.addEventListener('change', info_changed);
 destination.addEventListener('change', info_changed);
-crsid.addEventListener('change', info_changed);
 date.addEventListener('change', info_changed);
 role.addEventListener('change', info_changed);
 emissions.addEventListener('change', info_changed);
@@ -150,7 +111,6 @@ travel_mode.addEventListener('change', info_changed);
 function info_changed(){
 		document.getElementById("inputted_origin").innerHTML = document.getElementById("from").value;
 		document.getElementById("inputted_destination").innerHTML = document.getElementById("to").value;
-		document.getElementById("inputted_crsid").innerHTML = document.getElementById("crsid").value;
 		document.getElementById("inputted_date").innerHTML = document.getElementById("date").value;
 		document.getElementById("inputted_role").innerHTML = document.getElementById("role").value;
 		document.getElementById("inputted_emissions").innerHTML = document.getElementById("emmissions").value;
