--- a/transit.html
+++ b/transit.html
@@ -64,7 +64,7 @@
   <div id="inputted_details">
   <h3>Inputted Data</h3>
 	
-	<i>, Origin: <b><span id="inputted_origin"></span></b></i>
+	<i>Origin: <b><span id="inputted_origin"></span></b></i>
 	<i>, Destination: <b><span id="inputted_destination"></span></b></i>
 	<i>, Date: <b><span id="inputted_date"></span></b></i>
 	<i>, Role: <b><span id="inputted_role"></span></b></i>
