--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	<th>Distance (km)</th>
 	<th> Return Journey</th>
 	<th>CO<sub>2</sub>eq (kg)</th>
+	<th>Remove Entry</th>
 
   </tr>
   </thread>
